--- a/bike_app/pom.xml
+++ b/bike_app/pom.xml
@@ -48,6 +48,11 @@
                 <artifactId>json</artifactId>
                 <version>20231013</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.13.0</version> <!-- Use the latest version available -->
+            </dependency>
         </dependencies>
         <groupId>app.bike</groupId>
         <artifactId>bike_app</artifactId>
