--- a/java-maven-starter-project-main/pom.xml
+++ b/java-maven-starter-project-main/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.36</version>
         </dependency>
+        <!-- JSON parsing dependency -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
