--- a/java-maven-starter-project-main/pom.xml
+++ b/java-maven-starter-project-main/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>22.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
