--- a/java-maven-starter-project-main/pom.xml
+++ b/java-maven-starter-project-main/pom.xml
@@ -17,8 +17,16 @@
             <id>arcgis</id>
             <url>https://esri.jfrog.io/artifactory/arcgis</url>
         </repository>
+
     </repositories>
     <dependencies>
+
+        <!-- JTS Topology Suite -->
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.19.0</version> <!-- Use a compatible JTS version -->
+        </dependency>
         <!--JavaFX dependencies -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -55,6 +63,17 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
